# color_planar_graphs

./: .gitignore  README.md
Literature/: Conflict-Free Coloring of Graphs.txt
Presentations/: Bachelorproef_presentatie_1.bcf  Bachelorproef_presentatie_1.tex  Citations.bib  Commands.txt  exampleCF.tex  exampleCFopen.tex  exampleOdd.tex  exampleOddMiss.tex  simpleProper.tex
Verslagen/: Verslag07112025.docx  Verslag13112025.docx  Verslag16102025.docx  Verslag24102025.docx  Verslag28112025.docx  Verslag31102025.docx
archive/: benchmark.sh  benchmark_full.sh
code/: benchmark.sh
code/v5-C/: CMakeLists.txt  checkCorrectOutputs.sh  checkCycles.sh  checkOutputs.sh  color.sh  filter.json  gmon.out  graph_counts.json
code/v5-C-copy/: CMakeLists.txt  color.sh
code/v5-C-copy/graphs/: colorings.h  counter.c  counter.h  graph.c  graph.h  main.c  main.h  types.h  vertex.c  vertex.h
code/v5-C-copy/scripts/: showGraph6.sh
code/v5-C/graphs/: build  colorings.c  colorings.h  counter.c  counter.h  counterInput.c  counterInput.h  gadget_finder_input.c  graph.c  graph.h  main.c  main.h  types.h  vertex.c  vertex.h
code/v5-C/outputs/: chi_pCFo_6.txt
code/v5-C/scripts/: checkCorrectOutputs.sh  graph6ToImage.py  graph6_to_image.py  parseFilter.py  setup_venv.sh  showGraph6.sh  utils.sh
plantri55/: plantri  plantri-guide.txt
presentations/: Bachelorproef_presentatie_1.bbl  Bachelorproef_presentatie_1.bcf  Bachelorproef_presentatie_1.blg  Bachelorproef_presentatie_1.run.xml  Bachelorproef_presentatie_1.tex  Citations.bib  Commands.txt  exampleAlg1.tex  exampleAlg2.tex  (+11 more)
(+230 files in other folders)
